# 3d_file_browser

./: Cargo.toml  README.md  main.rs
app/: commands.rs  mod.rs  state.rs
domain/: actions.rs  events.rs  filters.rs  mod.rs  selection.rs  sort.rs
fs/: entries.rs  metadata.rs  mod.rs  navigation.rs  ops.rs  search.rs  watch.rs
platform/: input.rs  mod.rs  os.rs  shell.rs  window.rs
render/: geometry.rs  icons.rs  materials.rs  mod.rs  postprocess.rs  renderer.rs  text.rs
scene/: camera.rs  card.rs  deck.rs  hit_test.rs  layout.rs  mod.rs  transitions.rs
ui/: breadcrumbs.rs  command_bar.rs  inspector.rs  mod.rs  overlay.rs  style_panel.rs
