[package]
name = "spatial_file_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.27"
pollster = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
wgpu = "0.19"
winit = "0.29"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
